src/modes/snapshots/ascii_renderer__modes___101_p02_glm53f_max_a__tests__kolam_80x24.snap
---
source: src/modes/_101_p02_glm53f_max_a.rs
assertion_line: 447
expression: "text(&frame(80, 24, 42, 0.0, &knobs()))"
---
                                                                                
                                                                                
                                                                                
                                                                                
                                       ╱│╲                                      
                                 ─╱··╲╱  ·╲│╱│╲─                                
                             ─·││╱ ─│╲│╱╱╲╲    ╲╲│╲                             
                            ── ╱││╱─       ╲··╲╲   ─                            
                          ─╱╱╱ ──  │╱╱╱│╲││╲╲ ╲╲╲─ ─╲                           
                          ─ ─╱╱╱  ─·        ╲╲╲ ·──  ──                         
                          ── ─·───   ╱╱││╲╲╲ ─── ── ──                          
                         ─· ─── ·─ ──· ╱╲  ──  ── ── ──                         
                         ── ── ──  ──  ╲╱  ── ─· ───  ─                         
                         ──  ── ─── ╲╲╲││╱╱   ─── ─ ──                          
                         ─·· ──  ╲╲╲        ·─  ╱╱╱─ ─                          
                           ╲─ ╲╲╲─ ╲╲││╲│╱╱╱│  ── ╱╱╱╱                          
                            ─   ╲─╲│╲      ·─╱││─ ─·                            
                             ╲│╲─ ╲  ╲╲╱╱│╲│─ ╱││╱─                             
                                ─╲│╱╲╲   ╱╲  ──                                 
                                      ╲│╱
