src/modes/snapshots/ascii_renderer__modes___101_p02_glm53f_max_a__tests__kolam_80x24_t12.snap
---
source: src/modes/_101_p02_glm53f_max_a.rs
assertion_line: 692
expression: "text(&frame(80, 24, 42, 12.0, &knobs()))"
---
                                                                                
                                                                                
                                                                                
                                   ⌒ ∧ ⌒   ⌒ ∧                                  
                             ∧ ⌒⌒ ⌒  ~ ⌒⌒ ⌒ ◇~ ⌒                                
                            ⌒ ~  ⌒ ⌒ ~    ⌒·~ ⌒⌒ ⌒ ⌒                            
                            ⌒⌒ ~◇    ··   · ◇   ⌒⌒ ~ ∧                          
                         ⌒⌒⌒         · · ·  ··   ~   ⌒                          
                        ∧~  ⌒ · ··  ╱*╱│╲││─  · ◇  ⌒⌒⌒                          
                        ⌒ ⌒~   · ╱╱╱       ╲│╲─ ··  ⌒⌒⌒⌒                        
                        ◇⌒    ·· ──  ╱╱╱╲╲╲╲ ── ◇·· ~ ~ ∧                       
                       ⌒⌒ ⌒ ·   o─  ─· +╲··──··─    ⌒⌒ ⌒⌒                       
                       ∧~ ~   ◇·── ─── ╲╱ ──  ── ··  ⌒⌒                         
                        ⌒⌒⌒  ····── ╲╲╲││╱╱ ·──    ~⌒ ⌒⌒                        
                         ⌒⌒⌒  ◇  ─╲╲╲·    ╱╱╱╱╱      ~ ∧                        
                         ⌒   ~  ··  ─││╲│╱╱╱       ⌒⌒⌒                          
                          ∧~  ⌒ ◇  ····    ·◇ ◇~◇⌒⌒                             
                            ⌒⌒ ⌒⌒ ~⌒     ~⌒  ⌒  ~ ⌒                             
                              ◇⌒◇~◇ ⌒ ⌒⌒ ~ ⌒⌒ ⌒⌒ ∧                              
                                ∧ ⌒⌒  ⌒⌒   ⌒⌒                                   
                                         ∧
