src/modes/snapshots/ascii_renderer__modes___101_p02_glm53f_max_a__tests__kolam_lotus_variant.snap
---
source: src/modes/_101_p02_glm53f_max_a.rs
assertion_line: 623
expression: "text(&frame(80, 24, 42, 0.0, &k))"
---
                                                                                
                                                                                
                                     ∧◇  ∧◇ ◇                                   
                              ∧  ⌒∧⌒⌒ ⌒ ⌒ ⌒⌒⌒∧                                  
                           ∧  ⌒⌒⌒⌒~⌒~⌒⌒ ⌒~⌒⌒~⌒⌒⌒∧⌒                              
                           ⌒   ⌒⌒⌒⌒~⌒ ~ ~  ⌒⌒⌒⌒⌒⌒⌒⌒∧                            
                        ◇∧⌒⌒⌒⌒⌒~ ~  ·  ·     ~ ⌒⌒⌒⌒⌒⌒⌒                          
                       ∧  ⌒~⌒⌒      ·  · ·  ··   ⌒⌒⌒⌒⌒                          
                      ◇⌒⌒⌒⌒⌒~·   ·· ·╱╱│││╲╲╲···◇  ⌒  ◇∧                        
                      ∧⌒⌒⌒⌒       ─╱ ·     ╲╲╲  ··  ⌒⌒⌒⌒∧                       
                       ⌒~⌒⌒~  ··──╱  ╱╱││╲╲· ── ◇  ~⌒⌒⌒⌒                        
                      ∧⌒⌒⌒⌒  ·  ·──·─· ╱╲ ·─···──·  ⌒⌒⌒⌒∧                       
                       ⌒⌒⌒⌒~ ·◇─── ─── ╲╱ ── ── ◇··~⌒⌒~⌒                        
                      ∧⌒⌒⌒⌒   ·  ──  ╲╲││╱╱·  ╱─    ⌒⌒⌒⌒∧                       
                       ∧◇  ⌒  ··◇ ╲╲╲·  ·   ╱─·   ~⌒⌒⌒⌒⌒                        
                         ⌒⌒⌒⌒⌒  ···╲╲╲│││╱╱   ·  ⌒⌒~⌒  ∧                        
                         ⌒⌒⌒⌒⌒⌒⌒ ~  ···   ·· ~ ⌒⌒⌒⌒⌒⌒∧◇                         
                           ∧⌒⌒⌒⌒⌒⌒⌒⌒  ~ ~ ⌒~⌒⌒⌒⌒⌒⌒⌒⌒                            
                             ⌒∧⌒⌒⌒~⌒⌒~⌒ ⌒⌒~⌒~⌒⌒⌒⌒  ∧                            
                                 ∧⌒⌒⌒ ⌒ ⌒ ⌒⌒∧⌒  ∧                               
                                  ◇  ∧◇ ◇∧
